--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@mui/material": "^5.12.1",
+    "buffer": "^6.0.3",
+    "chart.js": "^4.3.0",
     "country-list-js": "^3.1.7",
     "firebase": "^9.21.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.8.0",
